# Veridoc

./: .coderabbit.yaml  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  config.py  debug_chroma.py  migrate_to_cosine.py  pyproject.toml  requirements.txt
backend/api/: auth_routes.py  document_routes.py  query_routes.py
backend/chroma_vectorestore/: chroma.sqlite3
backend/models/: schemas.py
backend/scripts/: reset_status.py
backend/services/: bedrock_service.py  document_service.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx
frontend/src/pages/: AdminPanel.jsx  DashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  SignupPage.jsx
